--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -59,6 +59,67 @@
   </div>
 </div>
 
+
+
+
+    <div class="tab">
+      <%# upcoming reservation card %>
+      <div class="card" id="user-reservation" style="overflow-y: scroll;">
+        <p> <strong>My Reservations </strong></p>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col"> Yacht </th>
+              <th scope="col"> mm/dd/yyyy </th>
+              <th scope="col"> Price </th>
+            </tr>
+          </thead>
+          <tbody>
+             <% @user_bookings.each do |yacht|%>
+             <tr>
+              <td scope="col"> <%= yacht.name %> </td>
+              <td scope="col"> mm/dd/yyyy </td>
+              <td scope="col"> € <%= yacht.price %> </td>
+              </tr>
+              <%end%>
+
+          </tbody>
+        </table>
+      </div>
+
+      <%# history card %>
+      <div class="card" id="user-history" style="overflow-y: scroll;">
+        <p> <strong>Your rental history: </strong></p>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Reciept number</th>
+              <th scope="col">Date</th>
+              <th scope="col">Amount</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>This will be a link######################</td>
+              <td>dd/mm/yyyy</td>
+              <td>price</td>
+            </tr>
+
+          </tbody>
+        </table>
+
+
+        <div class="show-more">
+          <%= link_to edit_user_registration_path do%>
+          <a href="#">Show all</a>
+          <% end %>
+        </div>
+      </div>
+
+    </div>
+
 <%# ---------------------apply the screen resolution thing to show and profile pages-------------------- %>
 
 <%# animated text %>
