--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -6,19 +6,26 @@
   inline-size: auto;
   justify-content: space-around;
 }
-.profile {
+#profile {
   padding-left: 20px;
   padding-right: 20px;
   margin-left: 20px;
   margin-right: 20px;
+  height: 570px;
 }
 // CARD CONTAINER
 #user-details {
   padding: 20px;
   display: flex;
   font-size: 16px;
-
+  border-radius: 8px;
+   box-shadow: 3px 5px rgb(223, 223, 223);
+   opacity: 0.8;
 }
+#user-details:hover {
+  opacity: 1;
+}
+
 // HISTORY CONTAINER
 #user-history {
   background-color: white;
@@ -27,6 +34,8 @@
   display: flex;
   font-size: 16px;
   margin-left: 20px;
+  border-radius: 8px;
+
 }
 #user-history p {
   font-size: 16px;
@@ -42,6 +51,12 @@
   margin-right: 40px;
   margin-inline-end: auto;
   width: -webkit-fill-available;
+  border-radius: 8px;
+  box-shadow: 3px 5px rgb(223, 223, 223);
+  opacity: 0.8;
+}
+#user-reservation:hover {
+  opacity: 1;
 }
 
 // header
@@ -56,8 +71,8 @@
 }
 
 .card-body p {
+  font-size: 20px;
 
-  font-size: 16px;
 }
 #profile {
   margin: 40px;
@@ -85,6 +100,34 @@ table {
   width: 100px;
   text-align: right;
 }
+
+
+// @media(max-width: 992px) {
+//   #user-detail {
+//     width: auto;
+//     height:auto;
+//   }
+//    #user-reservation {
+//     width: auto;
+//     width: auto;
+//   }
+// }
+
+// @media(max-width: 768px) {
+//   #profile {
+//     flex-direction: column;
+//   }
+//   #user-detail {
+//     width: 100%;
+//     height: 50%;
+//   }
+// }
+// @media(max-width: 576px) {
+//   .cards {
+
+//   }
+// }
+
 
 
 // tab
