--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -20,8 +20,8 @@
         <div class="first-show-card bg-white rounded shadow" id="reservation-box">
           <%= simple_form_for [@yacht, @booking] do |f| %>
           <h4>Reserve your dates</h4>
-          <%= f.input :starts_at, as: :string, required: false, input_html: { class: "datepicker" } %>
-          <%= f.input :ends_at, as: :string, required: false, input_html: { class: "datepicker" } %>
+          <%= f.input :start_date, as: :string, required: false, input_html: { class: "datepicker" } %>
+          <%= f.input :end_date, as: :string, required: false, input_html: { class: "datepicker" } %>
           <%= f.submit "Make Reservation", class: "btn btn-light index-card-button" %>
         <% end %>
         </div>
